Fix overflowed tab bar start alignment

--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -477,6 +477,11 @@
 	padding-inline-start: 0 !important;
 }
 
+#tabbrowser-tabs[overflow]
+{
+	margin-inline-start: 8px !important;
+}
+
 #tabbrowser-tabs[overflow] .tabbrowser-tab[first-visible-tab]:not([pinned]),
 #tabbrowser-tabs[overflow] .tabbrowser-tab[pinned] + .tabbrowser-tab:not([pinned]),
 #tabbrowser-tabs:not([overflow]) .tabbrowser-tab[first-visible-tab]
